# vairadiology

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py  0002_create_demo_user.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/annotate/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/annotate/: ImageAnnotator.tsx
frontend/components/shared/: AppNav.tsx  DateSelector.tsx  Icons.tsx
frontend/components/tasks/: Board.tsx  Column.tsx  TaskCard.tsx  TaskModal.tsx
frontend/lib/: api.ts  types.ts
frontend/store/: dateStore.ts
